--- a/index.html
+++ b/index.html
@@ -126,12 +126,27 @@ body {
 
 <!-- INTRO -->
 <div id="intro">
-  <h1><!-- TIÊU ĐỀ MỞ ĐẦU --></h1>
-  <p><!-- CÂU MỞ ĐẦU --></p>
+  <h1><!-- RECAP HK1 --></h1>
+  <p><!-- Đây là cuốn album cho HK1 của lớp 7A1 --></p>
   <button class="start-btn" onclick="start()">Bắt đầu</button>
 </div>
 
 <!-- EVENT MẪU (COPY KHỐI NÀY 12 LẦN) -->
+<div class="event" id="event1">
+  <h2><!-- KHAI GIẢNG --></h2>
+  <p><!-- Khai giảng là sự kiện đánh dấu sự bắt đầu của năm học mới. Buổi lễ được tổ chức nhằm chính thức mở đầu cho các hoạt động dạy và học, đồng thời phổ biến những định hướng chung cho năm học. --></p>
+
+  <div class="gallery">
+    <!-- THÊM ẢNH Ở ĐÂY (TỐI ĐA ~15 ẢNH) -->
+    <img src="">IMG_0405.jpg
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="next(2)">Tiếp theo</button>
+  </div>
+</div>
+  <!-- EVENT MẪU (COPY KHỐI NÀY 12 LẦN) -->
 <div class="event" id="event1">
   <h2><!-- TÊN EVENT --></h2>
   <p><!-- MÔ TẢ EVENT --></p>
