--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@ button:hover{
 <div class="page event" id="page1">
   <h2>
     <img src="icon-event1.png">
-    <!-- TÊN EVENT -->
+    <!-- Khai giảng -->
   </h2>
-  <p><!-- MÔ TẢ EVENT --></p>
+  <p><!-- Khai giảng là sự kiện đánh dấu sự bắt đầu của năm học mới. Buổi lễ được tổ chức nhằm chính thức mở đầu cho các hoạt động dạy và học, đồng thời phổ biến những định hướng chung cho năm học. --></p>
 
   <div class="gallery">
     <!-- 4 ảnh đầu -->
