--- a/index.html
+++ b/index.html
@@ -163,6 +163,43 @@ button:hover{
 
   <div class="gallery">
     <!-- 4 ảnh đầu -->
+    <img src="">IMG_0405.jpg
+    <img src="">
+    <img src="">
+    <img src="">
+
+    <!-- ảnh thêm -->
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">
+      <img src="icon-back.png"> Trước
+    </button>
+
+    <button onclick="more(this)">
+      <img src="icon-more.png"> Xem thêm
+    </button>
+
+    <button onclick="go(2)">
+      <img src="icon-next.png"> Tiếp
+    </button>
+  </div>
+</div>
+<!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>
+    <img src="icon-event1.png">
+    <!-- Khai giảng -->
+  </h2>
+  <p><!-- Khai giảng là sự kiện đánh dấu sự bắt đầu của năm học mới. Buổi lễ được tổ chức nhằm chính thức mở đầu cho các hoạt động dạy và học, đồng thời phổ biến những định hướng chung cho năm học. --></p>
+
+  <div class="gallery">
+    <!-- 4 ảnh đầu -->
     <img src=""> IMG_0405
     <img src="">
     <img src="">
@@ -183,6 +220,154 @@ button:hover{
 
     <button onclick="more(this)">
       <img src="icon-more.png"> Xem thêm
+    </button>
+
+    <button onclick="go(2)">
+      <img src="icon-next.png"> Tiếp
+    </button>
+  </div>
+</div>
+<!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>
+    <img src="icon-event1.png">
+    <!-- Khai giảng -->
+  </h2>
+  <p><!-- Khai giảng là sự kiện đánh dấu sự bắt đầu của năm học mới. Buổi lễ được tổ chức nhằm chính thức mở đầu cho các hoạt động dạy và học, đồng thời phổ biến những định hướng chung cho năm học. --></p>
+
+  <div class="gallery">
+    <!-- 4 ảnh đầu -->
+    <img src=""> IMG_0405
+    <img src="">
+    <img src="">
+    <img src="">
+
+    <!-- ảnh thêm -->
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">
+      <img src="icon-back.png"> Trước
+    </button>
+
+    <button onclick="more(this)">
+      <img src="icon-more.png"> Xem thêm
+    </button>
+
+    <button onclick="go(2)">
+      <img src="icon-next.png"> Tiếp
+    </button>
+  </div>
+</div>
+<!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>
+    <img src="icon-event1.png">
+    <!-- Khai giảng -->
+  </h2>
+  <p><!-- Khai giảng là sự kiện đánh dấu sự bắt đầu của năm học mới. Buổi lễ được tổ chức nhằm chính thức mở đầu cho các hoạt động dạy và học, đồng thời phổ biến những định hướng chung cho năm học. --></p>
+
+  <div class="gallery">
+    <!-- 4 ảnh đầu -->
+    <img src=""> IMG_0405
+    <img src="">
+    <img src="">
+    <img src="">
+
+    <!-- ảnh thêm -->
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">
+      <img src="icon-back.png"> Trước
+    </button>
+
+    <button onclick="more(this)">
+      <img src=<!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>
+    <img src="icon-event1.png">
+    <!-- Khai giảng -->
+  </h2>
+  <p><!-- Khai giảng là sự kiện đánh dấu sự bắt đầu của năm học mới. Buổi lễ được tổ chức nhằm chính thức mở đầu cho các hoạt động dạy và học, đồng thời phổ biến những định hướng chung cho năm học. --></p>
+
+  <div class="gallery">
+    <!-- 4 ảnh đầu -->
+    <img src=""> IMG_0405
+    <img src="">
+    <img src="">
+    <img src="">
+
+    <!-- ảnh thêm -->
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">
+      <img src="icon-back.png"> Trước
+    </button>
+
+    <button onclick="more(this)">
+      <img src="icon-more.png"> Xem thêm
+    </button>
+
+    <button onclick="go(2)">
+      <img src="icon-next.png"> Tiếp
+    </button>
+  </div>
+</div>
+<!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>
+    <img src="icon-event1.png">
+    <!-- Khai giảng -->
+  </h2>
+  <p><!-- Khai giảng là sự kiện đánh dấu sự bắt đầu của năm học mới. Buổi lễ được tổ chức nhằm chính thức mở đầu cho các hoạt động dạy và học, đồng thời phổ biến những định hướng chung cho năm học. --></p>
+
+  <div class="gallery">
+    <!-- 4 ảnh đầu -->
+    <img src=""> IMG_0405
+    <img src="">
+    <img src="">
+    <img src="">
+
+    <!-- ảnh thêm -->
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+    <img src="" class="hidden">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">
+      <img src="icon-back.png"> Trước
+    </button>
+
+    <button onclick="more(this)">
+      <img src="icon-more.png"> Xem thêm
+    </button>
+
+    <button onclick="go(2)">
+      <img src="icon-next.png"> Tiếp
+    </button>
+  </div>
+</div>
+"icon-more.png"> Xem thêm
     </button>
 
     <button onclick="go(2)">
