--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ button:hover{
 
   <div class="gallery">
     <!-- 4 ảnh đầu -->
-    <img src=""> IMG_0405
+<img src="IMG_0405.jpg">
     <img src="">
     <img src="">
     <img src="">
