--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@ button:hover{
   <div class="gallery">
     <!-- 4 ảnh đầu -->
 <img src="IMG_0405.jpg">
-    <img src="">
-    <img src="">
-    <img src="">
+    <img src="3W3A0225 (1).JPG">
+    <img src="3W3A0352.jpg">
+    <img src="3W3A0352.jpg">
 
     <!-- ảnh thêm -->
     <img src="" class="hidden">
