--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ button:hover{
     <img src="3W3A0352.jpg">
 
     <!-- ảnh thêm -->
-    <img src="" class="hidden">
+    <img src="IMG_0405.jpg" class="hidden">
     <img src="" class="hidden">
     <img src="" class="hidden">
     <img src="" class="hidden">
