--- a/index.html
+++ b/index.html
@@ -166,15 +166,7 @@ button:hover{
 <img src="IMG_0405.jpg">
     <img src="3W3A0225 (1).JPG">
     <img src="3W3A0352.jpg">
-    <img src="3W3A0352.jpg">
-
-    <!-- ảnh thêm -->
-    <img src="IMG_0405.jpg" class="hidden">
-    <img src="" class="hidden">
-    <img src="" class="hidden">
-    <img src="" class="hidden">
-    <img src="" class="hidden">
-  </div>
+    <img src="DSC03421.jpg">
 
   <div class="nav">
     <button onclick="go(0)">
