--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ button:hover{
 <div class="page active cover" id="page0">
   <img src="cover.jpg">
   <h1>Recap Học Kỳ I</h1>
-  <p>Chặng hành trình thứ 1 trong năm 2025-2026</p>
+  <p>Bảo tàng triễn lãm học tập HK1 7A1 </p>
 
   <div class="nav">
     <button onclick="go(1)">Bắt đầu</button>
@@ -137,11 +137,201 @@ button:hover{
 
 <!-- ===== EVENT MẪU ===== -->
 <div class="page event" id="page1">
-  <h2>NGÀY ĐỊNH HƯỚNG</h2>
-  <p>Ngày định hướng là một trong những ngày đầu tiên và đáng nhớ nhất, khi mọi thứ còn rất mới mẻ nhưng cũng đầy háo hức. Chúng tôi được làm quen với thầy cô, bạn bè, môi trường học tập và những quy định quan trọng của nhà trường.</p>
+  <h2>Ngày định hướng</h2>
+  <p>Ngày định hướng là một trong những ngày đầu tiên và đáng nhớ nhất, khi mọi thứ còn rất mới mẻ nhưng cũng đầy háo hức. Chúng tôi được làm quen với thầy cô, bạn bè, môi trường học tập và những quy định quan trọng của nhà trường [Ngày 5/9].</p>
 
   <div class="gallery">
+    <img src="IMG_0405.jpg"> 
+    <img src="DSC03421.jpg">
+    <img src="3W3A0352.jpg">
+    <img src="3W3A0225 (1).JPG">
     <img src="">
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">Trước</button>
+    <button onclick="go(2)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>Khai giảng</h2>
+  <p>Ngày khai giảng được tổ chức tại sân trường với các nghi thức cơ bản, chính thức mở đầu năm học mới.[Ngày 5/9]</p>
+
+  <div class="gallery">
+    <img src=""> 
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">Trước</button>
+    <button onclick="go(2)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>Công tác xã hội HK1</h2>
+  <p>Công tác xã hội là sự kiện giúp chúng em được tham gia trò chuyện cùng mọi người, đồng thời hỗ trợ và giúp đỡ những người xung quanh trong khả năng của mình.[25/10]</p>
+
+  <div class="gallery">
+    <img src=""> 
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">Trước</button>
+    <button onclick="go(2)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>Văn Nghệ HK1</h2>
+  <p>Văn nghệ giúp em rèn luyện sự tự tin, khả năng phối hợp và tinh thần làm việc nhóm.</p>
+
+  <div class="gallery">
+    <img src=""> 
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">Trước</button>
+    <button onclick="go(2)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>a</h2>
+  <p>a.</p>
+
+  <div class="gallery">
+    <img src=""> 
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">Trước</button>
+    <button onclick="go(2)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>a</h2>
+  <p>a.</p>
+
+  <div class="gallery">
+    <img src=""> 
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">Trước</button>
+    <button onclick="go(2)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>a</h2>
+  <p>a.</p>
+
+  <div class="gallery">
+    <img src=""> 
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">Trước</button>
+    <button onclick="go(2)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>a</h2>
+  <p>a.</p>
+
+  <div class="gallery">
+    <img src=""> 
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">Trước</button>
+    <button onclick="go(2)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>a</h2>
+  <p>a.</p>
+
+  <div class="gallery">
+    <img src=""> 
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">Trước</button>
+    <button onclick="go(2)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>a</h2>
+  <p>a.</p>
+
+  <div class="gallery">
+    <img src=""> 
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+
+  <div class="nav">
+    <button onclick="go(0)">Trước</button>
+    <button onclick="go(2)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT MẪU ===== -->
+<div class="page event" id="page1">
+  <h2>a</h2>
+  <p>a.</p>
+
+  <div class="gallery">
+    <img src=""> 
     <img src="">
     <img src="">
     <img src="">
