--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@ button:hover{
   <p>Ngày định hướng là một trong những ngày đầu tiên và đáng nhớ nhất, khi mọi thứ còn rất mới mẻ nhưng cũng đầy háo hức. Chúng tôi được làm quen với thầy cô, bạn bè, môi trường học tập và những quy định quan trọng của nhà trường [Ngày 5/9].</p>
 
   <div class="gallery">
-    <img src="IMG_0405.jpg"> 
-    <img src="DSC03421.jpg">
-    <img src="3W3A0352.jpg">
-    <img src="3W3A0225 (1).JPG">
+    <img src="DSC03421.jpg"> 
+    <img src="3W3A1485.JPG">
+    <img src="3W3A1348 (1).JPG">
+    <img src="DSC8400 (1).JPG">
     <img src="">
     <img src="">
   </div>
@@ -160,10 +160,10 @@ button:hover{
   <p>Ngày khai giảng được tổ chức tại sân trường với các nghi thức cơ bản, chính thức mở đầu năm học mới.[Ngày 5/9]</p>
 
   <div class="gallery">
-    <img src=""> 
-    <img src="">
-    <img src="">
-    <img src="">
+    <img src="IMG_0405.jpg"> 
+    <img src="3W3A0222.jpg">
+    <img src="3W3A0352.jpg">
+    <img src="3W3A0225 (1).JPG">
     <img src="">
     <img src="">
   </div>
