--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ button:hover{
     <img src="3W3A0222.jpg">
     <img src="3W3A0352.jpg">
     <img src="3W3A0225 (1).JPG">
-    <img src="">
+    <img src="3W3A0347.jpg">
     <img src="">
   </div>
 
